--- a/contatti.html
+++ b/contatti.html
@@ -16,8 +16,8 @@
     <header>
         <nav>
             <ul>
-                <li><a href="index.html">Menu </a></li>
-                <li><a href="lista.html">Lista</a></li>
+                <li><a href="index.html"><button class="bottone">Menu</button> </a></li>
+                <li><a href="lista.html"><button class="bottone">Lista</button></a></li>
             </ul>
         </nav>
 
